should be wprking

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
+	"id": "request-obsidian",
+	"name": "Request",
+	"version": "0.1.1",
 	"minAppVersion": "0.9.12",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md/about",
+	"description": "This plugin lets you make url requests from obsidian.",
+	"author": "ulysses.codes",
+	"authorUrl": "https://ulysses.codes",
 	"isDesktopOnly": false
 }
