--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-sample-plugin",
-  "version": "0.12.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "name": "request-obsidian",
+  "version": "0.1.1",
+  "description": "obsidian plugin for making requests",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
