--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"id": "request-obsidian",
+	"id": "obsidian-request",
 	"name": "Request",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"minAppVersion": "0.9.12",
 	"description": "This plugin lets you make url requests from obsidian.",
 	"author": "ulysses.codes",
